// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hides password quality by default 1`] = `
<div
  class={undefined}
>
  <input
    error={undefined}
    id="test"
    maxLength={50}
    name="test"
    onChange={[Function]}
    pattern={undefined}
    placeholder={undefined}
    required={true}
    title={undefined}
    type="password"
    value="Uisi38#8iad"
  />
  <label
    htmlFor="test"
  >
    Password
  </label>
</div>
`;

exports[`hides password quality when enabled but no password is entered 1`] = `
<div
  class={undefined}
>
  <input
    error={undefined}
    id="test"
    maxLength={50}
    name="test"
    onChange={[Function]}
    pattern={undefined}
    placeholder={undefined}
    required={true}
    showQuality={true}
    title={undefined}
    type="password"
    value=""
  />
  <label
    htmlFor="test"
  >
    Password
  </label>
</div>
`;

exports[`shows password quality when enabled and a password is entered 1`] = `
<div
  class={undefined}
>
  <input
    error={undefined}
    id="test"
    maxLength={50}
    name="test"
    onChange={[Function]}
    pattern={undefined}
    placeholder={undefined}
    required={true}
    showQuality={true}
    title={undefined}
    type="password"
    value="Uisi38#8iad"
  />
  <label
    htmlFor="test"
  >
    Password
  </label>
</div>
`;
